fix(icon): use contrast color for filled warning icon-item (#DS-5085) (#1643)
(cherry picked from commit f07e6cf2165fd7ea821d8cdd17f6ae6506094bf7)

--- a/packages/components/icon/icon-item-tokens.scss
+++ b/packages/components/icon/icon-item-tokens.scss
@@ -10,7 +10,7 @@
     --kbq-icon-item-filled-fade-off-contrast-background: var(--kbq-background-contrast);
     --kbq-icon-item-filled-fade-off-error-color: var(--kbq-icon-white);
     --kbq-icon-item-filled-fade-off-error-background: var(--kbq-background-error);
-    --kbq-icon-item-filled-fade-off-warning-color: var(--kbq-icon-white);
+    --kbq-icon-item-filled-fade-off-warning-color: var(--kbq-icon-contrast);
     --kbq-icon-item-filled-fade-off-warning-background: var(--kbq-background-warning);
     --kbq-icon-item-filled-fade-off-success-color: var(--kbq-icon-white);
     --kbq-icon-item-filled-fade-off-success-background: var(--kbq-background-success);
